[package]
name = "span"
version = "0.0.5"
edition = "2021"
authors = ["Sol Midnight <sol.midnight@blockglow.com>"]
description = "Networking crate implementing consensus."
repository = "https://github.com/blockglow/span"
license = "MIT"
readme = "CRATES.md"

[dependencies]
span_net = { path = "../span_net" }
span_macros = { path = "../span_macros" }
