[package]
name = "span_macros"
version = "0.0.1"
edition = "2021"
description = "Proc macro support crate for `span`"
repository = "https://github.com/blockglow/span"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
quote2 = "0.7.0"
syn = { version = "2.0.68", features = ["full"] }
